--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="error_string">There was an error. Tap here to retry</string>
+    <string name="no_results">No movies found</string>
 </resources>
