--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Popular Movies</string>
     <string name="error_string">There was an error. Tap here to retry</string>
     <string name="no_results">No movies found</string>
+
+    <!-- Detail Activity-->
+    <string name="detail_release_date_label">Release date:</string>
+    <string name="detail_plot_label">Plot:</string>
+    <string name="detail_rating_label">Rating:</string>
+    <string name="rating_out_of">%s/10</string>
 </resources>
