Use db for favorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="detail_reviews">Reviews</string>
     <string name="details_play_trailer_description">Click here to play the trailer on YouTube</string>
     <string name="detail_review_by">Review by</string>
+    <string name="menu_entry_show_popular_movies">Show popular movies</string>
+    <string name="menu_entry_show_top_rated_movies">Show top rated movies</string>
+    <string name="menu_entry_show_favorite_movies">Show favorite movies</string>
 </resources>
