--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="menu_entry_show_popular_movies">Show popular movies</string>
     <string name="menu_entry_show_top_rated_movies">Show top rated movies</string>
     <string name="menu_entry_show_favorite_movies">Show favorite movies</string>
+    <string name="details_activity_menu_toggle_favorite">Toggle favorite</string>
 </resources>
